# musicfetch

./: .gitignore  Cargo.toml  DROELOE_-_Strangers_Official_Visualizer.webm.part  LICENSE  README.md  TODO.md  TODO.txt  config_example.toml
.github/workflows/: build-android.yml
config/: default.toml
musicfetch-cli/: Cargo.toml
musicfetch-cli/src/: main.rs
musicfetch-common/: Cargo.toml
musicfetch-common/src/: lib.rs  serde_helper.rs
musicfetch-downloader/: Cargo.toml
musicfetch-downloader/src/: lib.rs
musicfetch-tagger/: Cargo.toml
musicfetch-tagger/src/: lib.rs
src/: cmdline.rs  config.rs  download.rs  main.rs  module_util.rs  structs.rs  tagging.rs  tui.rs
src/modules/: album.rs  albumcover.rs  download.rs  infocopy.rs  jsonfetch.rs  mod.rs  rename.rs  songcounter.rs  tag_files.rs  tagger.rs  tagui.rs  title_to_title.rs
src/modules/tagui/: dialog.rs  layout.rs  mod.rs  song_edit.rs  song_select.rs  util.rs
