[package]
name = "musicfetch"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
lofty = { git = "https://github.com/Serial-ATA/lofty-rs.git" }
regex = "1.7"
minreq = { version = "2.6.0", features = ["https", "punycode"] }
dialoguer = "*"
spinners = "4.1.0"
sanitize-filename = "0.4.0"
cursive = { version = "0.20.0", features = [
    "crossterm-backend",
], default-features = false }
