[package]
name = "musicfetch"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { git = "https://github.com/phayes/json.git" , rev = "55ff89bcc56d2ef45b63f32d0565fe4ee54d510a" }
lofty = { git = "https://github.com/Serial-ATA/lofty-rs.git" }
regex = "1.7"
minreq = { version = "2.6.0", features = ["https", "punycode"] }
cursive = { version = "0.20.0", features = [
    "crossterm-backend",
], default-features = false }
cursive-aligned-view = "^0"
toml = "0.7"
phf = { version = "0.11.1", features = ["macros"] }
lexopt = "0.3.0"
anyhow = "1.0"
infer = "0.13.0"
log = "0.4.17"
fs_extra = "1.3.0"
simplelog = "0.12.1"
