[package]
name = "musicfetch-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musicfetch-downloader = { path = "../musicfetch-downloader" }
musicfetch-tagger = { path = "../musicfetch-tagger" }
musicfetch-common = { path = "../musicfetch-common" }
clap = {version = "4.0", features = ["derive"] }
serde_json = "1.0"
id3 = "1.5"